@@ -4,6 +4,10 @@ Changelog
 1.0 - unreleased
 ----------------
 
+* Make sure the Title() accessor for Dexterity content returns an encoded
+  bytestring as expected for CMF-style accessors.
+  [davisagli]
+
 1.0rc1 - 2011-04-30
 -------------------
 
